--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,5 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Thibaut Moia'
+  github_nickname: 'tmoia'
+- name: 'Chritine Royer'
+  github_nickname: 'citizenoftheworld
+'
